# MapPIG

./: .arcconfig  .gitignore  .travis.yml  CMakeLists.txt  Gruntfile.js  LICENSE  README.md  appveyor.yml  deploy.json  index.html  main.js  mapthing.pro  package.json
assets/css/: leaflet-search.src.css  main.css
assets/templates/: modal.handlebars
conf/: baselayers.json  conf.json  wms.json
docs/: Makefile  conf.py  core.md  index.md  local_geoserver_instance.txt  make.bat  plugins.md  services.rst  sql_queries.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
docs/api/: css.md  dom.md  toc.md
docs/source/: conf.py  index.rst
js/: bubblelayer.js  datalayer.js  dom.js  init.js  layerpanel.js  map.js  map_control.js  templates.js  tour.js  wms.js
plugins/basic_example/: package.json  plugin.js
resources/: index.html  stylesheet.qss
src/: dom.js  init.js  layerpanel.js  layers.js  legend_control.js  loader.js  map_control.js  ows.js  ows_control.js  plugins.js  templates.js  tour.js  wms.js
src/MapThing/: MapThing.pro  bridge.cpp  bridge.h  constants.h  datarequests.cpp  datarequests.h  fatof.h  jcalfdb.cpp  jcalfdb.h  mainwindow.cpp  mainwindow.h  plugininterface.h  portfolio.cpp  portfolio.h  resources.qrc
src/Resources/: index.html
src/cpp/: Makefile  Makefile.Debug  Makefile.Release  MapThing.pro  bridge.cpp  bridge.h  constants.h  datarequests.h  mainwindow.cpp  mainwindow.h  plugininterface.h  portfolio.h  resources.qrc
src/gui/: bridge.cpp  gui.pro  mainwindow.cpp  mainwindow.h  resources.qrc
src/libmapthing/: csvparser.c  libmapthing.pro  mapthingutil.cpp  mapthingutil.h  portfolio.cpp  progresscounter.h  workerbase.cpp
src/prototype/: .project  .pydevproject  gui.py  resource.py  resources.qrc
src/workers/: cluster_worker.js
test_data/: ptf_10k.csv
vendors/jquery-ui-1.12.0.custom/: jquery-ui.js  jquery-ui.min.js
vendors/jquery-ui-1.12.1.custom/: index.html  jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.css  jquery-ui.structure.min.css  jquery-ui.theme.min.css
vendors/js/: leaflet-search.src.js  leaflet-wms-getlegendgraphic.js
(+51 files in other folders)
